--- a/src/styles/components/_followers.scss
+++ b/src/styles/components/_followers.scss
@@ -2,15 +2,13 @@
 
 .followers {
   flex: 1;
-  margin-top: 7.5rem;
   padding: 2rem;
   position: relative;
   height: 30rem;
-  min-width: 49rem;
   background-color: #fff;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
+  border-radius: 5px;
+  border-top-left-radius: 0;
+  width: 100%;
   &::before {
     content: "Followers";
     position: absolute;
@@ -27,7 +25,7 @@
 }
 
 .followers-container {
-  height: 100%;
+  max-height: 26rem;
   overflow-y: auto;
   .follower {
     margin-bottom: 2rem;
@@ -36,18 +34,19 @@
       width: 5rem;
       border-radius: 50%;
     }
-    .follower-username {
-      margin-left: 2rem;
-      p {
-        margin: 0;
-        font-size: 1.65rem;
-        margin-bottom: 0.5rem;
-        font-weight: 700;
-      }
-      a {
-        font-size: 1.5rem;
-        color: #2caeba;
-      }
-    }
+  }
+}
+
+.follower-username {
+  margin-left: 2rem;
+  p {
+    margin: 0;
+    font-size: 1.65rem;
+    margin-bottom: 0.5rem;
+    font-weight: 700;
+  }
+  a {
+    font-size: 1.5rem;
+    color: #2caeba;
   }
 }
